--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,7 @@
 spring:
   application:
     name: langchain4j-llm-gemini
+
+gemini:
+    api: {$API_KEY} # Replace {$API_KEY} with your actual Gemini API key
+    model: gemini-2.5-flash
